--- a/exercise-1/index.html
+++ b/exercise-1/index.html
@@ -6,10 +6,10 @@
 </head>
 <body>
   <h1>TODO</h1>
-
-  <!--
-    Your HTML goes here
-   -->
+  
+  <input type="text" class="todo-input">
+  <ul class="todo-list">
+  </ul>
 
   <script src="script.js"></script>
 </body>
