--- a/exercise-2/index.html
+++ b/exercise-2/index.html
@@ -6,13 +6,15 @@
 </head>
 <body>
   <h1>TODO</h1>
-  <form id="the-form">
-    <input type="text" id="item" >
-  </form>
-  <ul id="todolist">
+  
+  <input type="text" class="todo-input">
+  <ul class="todo-list"></ul>
+  <div class="todo-filters">
+    <button data-filter="done">Done</button>
+    <button data-filter="not-done">Not Done</button>
+    <button data-filter="show-all">Show All</button>
+  </div>
 
-  </ul>
   <script src="script.js"></script>
-
 </body>
 </html>
