--- a/exercise-2/index.html
+++ b/exercise-2/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>My TODO List!</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Playfair+Display:700|Domine:400">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Megrim|Roboto+Slab:400">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 </head>
 <body>
@@ -16,7 +16,7 @@
     <div class="todo-filters">
       <button data-filter="done">Done</button>
       <button data-filter="not-done">Not Done</button>
-      <button data-filter="show-all">Show All</button>
+      <button data-filter="show-all" class="showAllButton">Show All</button>
     </div>
   </div>
 
