--- a/exercise-2/index.html
+++ b/exercise-2/index.html
@@ -16,7 +16,7 @@
     <div class="todo-filters">
       <button data-filter="done">Done</button>
       <button data-filter="not-done">Not Done</button>
-      <button data-filter="show-all" class="showAllButton">Show All</button>
+      <button data-filter="show-all" class="show-all-button">Show All</button>
     </div>
   </div>
 
